# GeoTechAgro

./: .gitignore  CMakeLists.txt  GeoTechAgro.cc  README.md  RegisteredNeutronsCount.C  cry_setup.in  run.mac  soil_example.in  vis.mac
include/: Action.hh  AnalysisManager.hh  AtmosphereParametrization.hh  BrickParameterisation.hh  CsITl.hh  Detector.hh  EventAct.hh  Gamma.hh  Geometry.hh  Loader.hh  MilliNM.hh  NMEpithermal.hh  NMFast.hh  NMThermal.hh  PrimaryPartCRY.hh  RunAct.hh  SDHit.hh  SensitiveDetector.hh  StepAct.hh
src/: Action.cc  AnalysisManager.cc  AtmosphereParametrization.cc  BrickParameterisation.cc  CsITl.cc  Detector.cc  EventAct.cc  Gamma.cc  Geometry.cc  Loader.cc  MilliNM.cc  NMEpithermal.cc  NMFast.cc  NMThermal.cc  PrimaryPartCRY.cc  RunAct.cc  SDHit.cc  SensitiveDetector.cc  StepAct.cc
